# Cubixio

./: CMakeLists.txt  README.md
3rd Party/glad/: CMakeLists.txt
3rd Party/glad/include/glad/: glad.h
3rd Party/glad/src/: glad.c
cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_ttf.cmake
resources/: README.md
resources/shaders/: FragmentShader.frag  SceneVertexShader.vert  UIVertexShader.vert  VertexShader.vert
src/: Mesh.cpp  Mesh.h  Object.cpp  Object.h  Render.cpp  Render.h  Renderer.cpp  Renderer.h  main.cpp
